:sparkles:[feat]: generateRandomGroups, printResult구현